--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ProverbDetail" />
-        <activity android:name=".ProverbListActivity"></activity>
+        <activity android:name=".ProverbDetail" android:screenOrientation="portrait" />
+        <activity android:name=".ProverbListActivity" android:screenOrientation="portrait" />
     </application>
 
 </manifest>
